--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
             <h1>Find Your Path to Healing</h1>
             <p class="hero-subtitle">Compassionate, holistic therapy for individuals, couples, and families</p>
             <p class="hero-description">
-                I believe in the power of authentic connection and gentle guidance to help you navigate life's challenges
-                and discover your inner strength.
+                I'm dedicated to walking alongside teens and adults throughout California as they face life's most challenging moments. I create healing spaces in both individual and group sessions. My practice centers on individuals between 15 and 40 years old, where I foster environments of safety and growth rooted in deep, authentic empathy and cultural awareness.
             </p>
             <a href="#contact" class="cta-button">Schedule a Consultation</a>
         </div>
