--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h1>Find Your Path to Healing</h1>
             <p class="hero-subtitle">Compassionate, holistic therapy for individuals, couples, and families</p>
             <p class="hero-description">
-                I'm dedicated to walking alongside teens and adults throughout California as they face life's most challenging moments. I create healing spaces in both individual and group sessions. My practice centers on individuals between 15 and 40 years old, where I foster environments of safety and growth rooted in deep, authentic empathy and cultural awareness.
+                At the heart of my practice lies a fundamental belief: you are not broken, and you don't need to be fixed. Instead, I see therapy as a collaborative journey of rediscovering the wisdom and strength that already lives within you. My role isn't to have all the answers, but to create a space safe enough for you to explore your own questions, to feel your feelings fully, and to reconnect with the parts of yourself that may have gone into hiding.
             </p>
             <a href="#contact" class="cta-button">Schedule a Consultation</a>
         </div>
