--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
                     Licensed Marriage & Family Therapist with over 10 years of experience in holistic healing approaches.
                 </p>
                 <p>
-                    My journey into therapy began with my own healing process and the profound realization that we all
-                    have an innate capacity for growth and transformation. I integrate traditional therapeutic techniques
-                    with mindfulness-based practices to create a safe, nurturing space for exploration and healing.
+                    My therapeutic toolkit draws from evidence-based modalities including Cognitive Behavioral Therapy (CBT), Dialectical Behavior Therapy (DBT), EMDR, and mindfulness-based practices. However, I've learned that technique without genuine connection is just intellectual exercise. What truly facilitates healing is the alchemy that occurs when proven methods meet authentic human presence.
+                    I specialize in walking alongside individuals navigating trauma, PTSD, depression, bipolar disorder, and anxiety-related conditions. I'm particularly passionate about supporting teenagers and young adults who are struggling with school avoidance, intrusive thoughts, and emotional dysregulation—recognizing that these challenges often mask deeper questions about identity, belonging, and purpose.
                 </p>
                 <p>
                     I hold a Master's degree in Counseling Psychology from the University of California, Santa Cruz and I am
