--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600&family=Lato:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
@@ -68,6 +71,9 @@
             <div class="about-text">
                 <h2>About Me</h2>
                 <p class="about-intro">
+                    My path to becoming a therapist wasn't just chosen—it was called forth by a deep understanding that healing happens in relationship, in the sacred space between two people willing to sit with both pain and possibility. I've always been drawn to the complexity of human experience, fascinated by our capacity to not just survive difficult circumstances, but to transform through them in ways that surprise even ourselves.
+                </p>
+                <p>
                     Licensed Marriage & Family Therapist with over 10 years of experience in holistic healing approaches.
                 </p>
                 <p>
