--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
             <div class="about-text">
                 <h2>About Me</h2>
                 <p class="about-intro">
+                    I believe that lasting change happens not through force or willpower alone, but through understanding, acceptance, and the gradual cultivation of new ways of being.
+                </p>
+                <p>
                     My path to becoming a therapist wasn't just chosen—it was called forth by a deep understanding that healing happens in relationship, in the sacred space between two people willing to sit with both pain and possibility. I've always been drawn to the complexity of human experience, fascinated by our capacity to not just survive difficult circumstances, but to transform through them in ways that surprise even ourselves.
                 </p>
                 <p>
